@@ -190,6 +190,7 @@ sub generate_coderef {
       my (\$logger)  = shift;
       my (\$level)   = pop;
       my \$message;
+      my \$appenders_fired = 0;
 
       \$message = join('', map { ref \$_ eq "CODE" ? \$_->() : defined \$_ ? \$_ : '' } \@_);
       
@@ -202,6 +203,7 @@ sub generate_coderef {
 
           print("  Sending message '\$message' (\$level) " .
                 "to \$appender_name\n") if DEBUG;
+
           \$appender->log(
               #these get passed through to Log::Dispatch
               { name    => \$appender_name,
@@ -211,10 +213,14 @@ sub generate_coderef {
               #these we need
               \$logger->{category},
               \$level,
-          );
+          ) and \$appenders_fired++;
+              # Only counting it if it returns a true value. Otherwise
+              # the appender threshold might have suppressed it after all.
     
       } #end foreach appenders
     
+      return \$appenders_fired;
+
     }; #end coderef
 
 EOL
@@ -244,6 +250,7 @@ EOL
     \$coderef = sub {
         print("noop: \n") if DEBUG;
         $watch_delay_code
+        return undef;
      };
 EOL
 
